tests/sema/fail/ref_mut_immutable.kl
int main() {
  const int a = 1;
  &mut a;
  return 0;
}
